# cypher-direction

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: ci.yml
cypher_direction/: CypherLexer.py  CypherListener.py  CypherParser.py  CypherParserListener.py  Trees.py  cypher_direction.py
tests/: test_cypher_direction.py
tests/resources/: examples.csv  small.csv
