[tool.poetry]
name = "cypher-direction"
version = "0.1.0"
description = ""
authors = ["Stefan Armbruster <stefan@armbruster-it.de>"]
readme = "README.md"
packages = [{include = "cypher_direction"}]

[tool.poetry.dependencies]
python = "^3.10"
pycypher = {git = "https://github.com/Mizzlr/pycypher.git"}
antlr4-python3-runtime = "4.8"  ## pycypher uses this version, recent 4.13 causes errors.


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-csv-params = "^1.1.0"
attrs = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
