[tool.poetry]
name = "cypher-direction"
version = "0.1.0"
description = ""
authors = ["Stefan Armbruster <stefan@armbruster-it.de>"]
readme = "README.md"
packages = [{include = "cypher_direction"}]

[tool.poetry.dependencies]
python = "^3.10"
antlr4-python3-runtime = "^4.13.0"  

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-csv-params = "^1.1.0"

# enable cli log for debugging
#[tool.pytest.ini_options]
#log_cli = "True"
#log_cli_level = "debug"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

